Dark mode fix

--- a/app/assets/stylesheets/darkmode.scss
+++ b/app/assets/stylesheets/darkmode.scss
@@ -193,5 +193,9 @@
         background-color: lighten(#444,20%);
       }
     }
+
+    .notification-item:hover {
+      background-color: lighten(#444, 8%);
+    }
   }
 }
